--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Geografy</string>
+    <string name="login_failed" />
+    <string name="invalid_username" />
+    <string name="invalid_password" />
+    <string name="titulo">Geografy</string>
 </resources>
